--- a/_biblography/references.bib
+++ b/_biblography/references.bib
@@ -1,1 +1,216 @@
+@incollection{AlsoInterest2022,
+  title = {Also of {{Interest}}},
+  booktitle = {Technosignatures for {{Detecting Intelligent Life}} in {{Our Universe}}},
+  year = {2022},
+  pages = {165--166},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  doi = {10.1002/9781119640738.oth},
+  urldate = {2022-12-01},
+  isbn = {978-1-119-64073-8},
+  langid = {english},
+  file = {/Users/gemmadanks/Zotero/storage/KDWSAUKI/2022 - Also of Interest.pdf;/Users/gemmadanks/Zotero/storage/MUTL7VKI/9781119640738.html}
+}
+
+@incollection{balbiStatisticalIssuesSearch2022,
+  title = {Statistical {{Issues}} in the {{Search}} for {{Technosignatures}}},
+  booktitle = {Technosignatures for {{Detecting Intelligent Life}} in {{Our Universe}}},
+  author = {Balbi, Amedeo and Grimaldi, Claudio},
+  year = {2022},
+  pages = {127--147},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  doi = {10.1002/9781119640738.ch8},
+  urldate = {2022-12-01},
+  abstract = {New ambitious initiatives searching for technosignatures from exo-civilizations are currently being pursued and others are planned in the future, allowing exploration of the parameter search space on an unprecedented scale. Despite this intense activity and the decades-old history of related searches, there have been only limited efforts in analyzing systematically the prospects of either the detection or the non-detection of technosignatures. This chapter will review the recent progress made in developing full physical-statistical descriptions of electromagnetic technosignatures that could possibly populate the Milky Way.},
+  chapter = {8},
+  isbn = {978-1-119-64073-8},
+  langid = {english},
+  keywords = {bayes' theorem,drake's equation,SETI,T echnosignatures,theory of probability},
+  file = {/Users/gemmadanks/Zotero/storage/4SYYHAHF/9781119640738.html}
+}
+
+@incollection{bereaEconomicsTechnosignaturesNew2022,
+  title = {Economics and {{Technosignatures}}: {{New Connections}}},
+  shorttitle = {Economics and {{Technosignatures}}},
+  booktitle = {Technosignatures for {{Detecting Intelligent Life}} in {{Our Universe}}},
+  author = {Berea, Anamaria},
+  year = {2022},
+  pages = {149--160},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  doi = {10.1002/9781119640738.ch9},
+  urldate = {2022-12-01},
+  abstract = {In this chapter I explore the many ways in which economics and technosignatures can bring forth fruitful connections between the two fields, from methods to findings and analyses. I also comment on the larger field of astrobiology. I note how social sciences and particularly economics can shed some light or point directions towards finding answers to particular questions regarding social behavior, cooperation and competition, complex systems, and so on in living systems on Earth that we are also likely to find elsewhere.},
+  chapter = {9},
+  isbn = {978-1-119-64073-8},
+  langid = {english},
+  keywords = {astrobiology,competition and cooperation,complex systems,E conomics,social behavior,technosignatures},
+  file = {/Users/gemmadanks/Zotero/storage/VDL64NUA/9781119640738.html}
+}
+
+@article{bereaPromiseDataScience2019,
+  title = {The {{Promise}} of {{Data Science}} for the {{Technosignatures Field}}},
+  author = {Berea, Anamaria and Croft, Steve and Angerhausen, Daniel},
+  year = {2019},
+  month = mar,
+  eprint = {1903.08381},
+  doi = {10.48550/arxiv.1903.08381},
+  urldate = {2022-11-17},
+  abstract = {This paper outlines some of the possible advancements for the technosignatures searches using the new methods currently rapidly developing in computer science, such as machine learning and deep learning. It also showcases a couple of case studies of large research programs where such methods have been already successfully implemented with notable results. We consider that the availability of data from all sky, all the time observations paired with the latest developments in computational capabilities and algorithms currently used in artificial intelligence, including automation, will spur an unprecedented development of the technosignatures search efforts.},
+  archiveprefix = {arxiv},
+  file = {/Users/gemmadanks/Zotero/storage/FCTRRIKR/full-text.pdf}
+}
+
+@article{bracewellCommunicationsSuperiorGalactic1960,
+  title = {Communications from {{Superior Galactic Communities}}},
+  author = {Bracewell, R. N.},
+  year = {1960},
+  month = may,
+  journal = {Nature},
+  volume = {186},
+  number = {4726},
+  pages = {670--671},
+  issn = {0028-0836, 1476-4687},
+  doi = {10.1038/186670a0},
+  urldate = {2022-12-26},
+  langid = {english},
+  file = {/Users/gemmadanks/Zotero/storage/85IQYYJL/bracewell1960.pdf}
+}
+
+@misc{brownPanoramicSETIOverall2021,
+  title = {Panoramic {{SETI}}: Overall Mechanical System Design},
+  shorttitle = {Panoramic {{SETI}}},
+  author = {Brown, Aaron M. and Aronson, Michael L. and Wright, Shelley A. and Maire, J{\'e}r{\^o}me and Cosens, Maren and Wiley, James H. and Antonio, Franklin and Horowitz, Paul and Raffanti, Rick and Werthimer, Dan and Liu, Wei},
+  year = {2021},
+  month = nov,
+  number = {arXiv:2111.12771},
+  eprint = {2111.12771},
+  primaryclass = {astro-ph},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2111.12771},
+  urldate = {2022-12-01},
+  abstract = {PANOSETI (Pulsed All-Sky Near-infrared Optical Search for Extra Terrestrial Intelligence) is a dedicated SETI (Search for Extraterrestrial Intelligence) observatory that is being designed to observe 4,441 sq. deg. to search for nano- to milli-second transient events. The experiment will have a dual observatory system that has a total of 90 identical optical 0.48 m telescopes that each have a 99 square degree field of view. The two observatory sites will be separated by 1 km distance to help eliminate false positives and register a definitive signal. We discuss the overall mechanical design of the telescope modules which includes a Fresnel lens housing, a shutter, three baffles, an 32x32 array of Hamamatsu Multi-Photon Pixel Counting (MPPC) detectors that reside on a linear stage for focusing. Each telescope module will be housed in a triangle of a 3rd tessellation frequency geodesic dome that has the ability to have directional adjustment to correct for manufacturing tolerances and astrometric alignment to the second observatory site. Each observatory will have an enclosure to protect the experiment, and an observatory room for operations and electronics. We will review the overall design of the geodesic domes and mechanical telescope attachments, as well as the overall cabling and observatory infrastructure layout.},
+  archiveprefix = {arxiv},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+  file = {/Users/gemmadanks/Zotero/storage/5M3G5QPZ/Brown et al. - 2021 - Panoramic SETI overall mechanical system design.pdf;/Users/gemmadanks/Zotero/storage/58WR333J/2111.html}
+}
+
+@article{brzyckiNarrowbandSignalLocalization2020,
+  title = {Narrow-Band {{Signal Localization}} for {{SETI}} on {{Noisy Synthetic Spectrogram Data}}},
+  author = {Brzycki, Bryan and Siemion, Andrew P. V. and Croft, Steve and Czech, Daniel and DeBoer, David and DeMarines, Julia and Drew, Jamie and Gajjar, Vishal and Isaacson, Howard and Lacki, Brian and Lebofsky, Matthew and MacMahon, David H. E. and de Pater, Imke and Price, Danny C. and Worden, S. Pete},
+  year = {2020},
+  month = sep,
+  journal = {Publications of the Astronomical Society of the Pacific},
+  volume = {132},
+  number = {1017},
+  pages = {114501},
+  publisher = {{The Astronomical Society of the Pacific}},
+  issn = {1538-3873},
+  doi = {10.1088/1538-3873/abaaf7},
+  urldate = {2022-12-01},
+  abstract = {As it stands today, the search for extraterrestrial intelligence is highly dependent on our ability to detect interesting candidate signals, or technosignatures, in radio telescope observations and distinguish these from human radio frequency interference (RFI). Current signal search pipelines look for signals in spectrograms of intensity as a function of time and frequency (which can be thought of as images), but tend to do poorly in identifying multiple signals in a single data frame. This is especially apparent when there are dim signals in the same frame as bright, high signal-to-noise ratio (S/N) signals. In this work, we approach this problem using convolutional neural networks (CNN) as a computationally efficient method for localizing signals in synthetic observations resembling data collected by Breakthrough Listen using the Green Bank Telescope. We generate two synthetic data sets, the first with exactly one signal at various S/N levels and the second with exactly two signals, one of which represents RFI. We find that a residual CNN with strided convolutions and using multiple image normalizations as input outperforms a more basic CNN with max pooling trained on inputs with only one normalization. Training each model on a smaller subset of the training data at higher S/N levels results in a significant increase in model performance, reducing root mean square errors by at least a factor of 3 at an S/N of 25 dB. Although each model produces outliers with significant error, these results demonstrate that using CNNs to analyze signal location is promising, especially in image frames that are crowded with multiple signals.},
+  langid = {english},
+  file = {/Users/gemmadanks/Zotero/storage/2XRL6R9J/Brzycki et al. - 2020 - Narrow-band Signal Localization for SETI on Noisy .pdf}
+}
+
+@article{brzyckiSetigenSimulatingRadio2022,
+  title = {Setigen: {{Simulating Radio Technosignatures}} for {{SETI}}},
+  shorttitle = {Setigen},
+  author = {Brzycki, Bryan and Siemion, Andrew P. V. and {de Pater}, Imke and Croft, Steve and Hoang, John and Ng, Cherry and Price, Danny C. and Sheikh, Sofia Z. and Zheng, Zihe},
+  year = {2022},
+  month = may,
+  journal = {The Astronomical Journal},
+  volume = {163},
+  number = {5},
+  eprint = {2203.09668},
+  primaryclass = {astro-ph},
+  pages = {222},
+  issn = {0004-6256, 1538-3881},
+  doi = {10.3847/1538-3881/ac5e3d},
+  urldate = {2022-11-24},
+  abstract = {The goal of the search for extraterrestrial intelligence (SETI) is the detection of non-human technosignatures, such as technology-produced emission in radio observations. While many have speculated about the character of such technosignatures, radio SETI fundamentally involves searching for signals that not only have never been detected, but also have a vast range of potential morphologies. Given that we have not yet detected a radio SETI signal, we must make assumptions about their form to develop search algorithms. The lack of positive detections also makes it difficult to test these algorithms' inherent efficacy. To address these challenges, we present Setigen, a Python-based, open-source library for heuristic-based signal synthesis and injection for both spectrograms (dynamic spectra) and raw voltage data. Setigen facilitates the production of synthetic radio observations, interfaces with standard data products used extensively by the Breakthrough Listen project (BL), and focuses on providing a physically-motivated synthesis framework compatible with real observational data and associated search methods. We discuss the core routines of Setigen and present existing and future use cases in the development and evaluation of SETI search algorithms.},
+  archiveprefix = {arxiv},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+  file = {/Users/gemmadanks/Zotero/storage/B8L7ILG2/Brzycki et al. - 2022 - Setigen Simulating Radio Technosignatures for SET.pdf;/Users/gemmadanks/Zotero/storage/WEFUD2VD/2203.html}
+}
+
+@article{cabrolAlienMindscapesPerspective2016,
+  title = {Alien {{Mindscapes}}\textemdash{{A Perspective}} on the {{Search}} for {{Extraterrestrial Intelligence}}},
+  author = {Cabrol, Nathalie A.},
+  year = {2016},
+  month = sep,
+  journal = {Astrobiology},
+  volume = {16},
+  number = {9},
+  pages = {661--676},
+  publisher = {{Mary Ann Liebert, Inc., publishers}},
+  issn = {1531-1074},
+  doi = {10.1089/ast.2016.1536},
+  urldate = {2022-12-01},
+  abstract = {Advances in planetary and space sciences, astrobiology, and life and cognitive sciences, combined with developments in communication theory, bioneural computing, machine learning, and big data analysis, create new opportunities to explore the probabilistic nature of alien life. Brought together in a multidisciplinary approach, they have the potential to support an integrated and expanded Search for Extraterrestrial Intelligence (SETI1), a search that includes looking for life as we do not know it. This approach will augment the odds of detecting a signal by broadening our understanding of the evolutionary and systemic components in the search for extraterrestrial intelligence (ETI), provide more targets for radio and optical SETI, and identify new ways of decoding and coding messages using universal markers. Key Words: SETI\textemdash Astrobiology\textemdash Coevolution of Earth and life\textemdash Planetary habitability and biosignatures. Astrobiology 16, 661\textendash 676.},
+  file = {/Users/gemmadanks/Zotero/storage/92MN6Y6W/Cabrol - 2016 - Alien Mindscapes—A Perspective on the Search for E.pdf}
+}
+
+@incollection{charbonneauHistoricalPerspectivesHow2022,
+  title = {Historical {{Perspectives}}: {{How}} the {{Search}} for {{Technosignatures Grew Out}} of the {{Cold War}}},
+  shorttitle = {Historical {{Perspectives}}},
+  booktitle = {Technosignatures for {{Detecting Intelligent Life}} in {{Our Universe}}},
+  author = {Charbonneau, Rebecca},
+  year = {2022},
+  pages = {1--32},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  doi = {10.1002/9781119640738.ch1},
+  urldate = {2022-12-01},
+  abstract = {This chapter focuses on the history of the search for extraterrestrial intelligence. It will explore the following questions: Why did SETI transition from a fringe idea to a concerted scientific effort in the 1960s? What were the different cultural, ideological, and technical approaches in the search? Why did SETI develop primarily in the US and Soviet Union as opposed to other countries? What challenges did early SETI pioneers face? In investigating these questions, I will focus especially on the collaborative efforts between US astronomer Carl Sagan and Soviet astrophysicist I.S Shklovsky as my main case study. This chapter aims to contextualize the current effort to search for technosignatures within its historical roots, with hopes this context will prompt a mindful analysis of how we utilize the artefacts from history in the ongoing search.},
+  chapter = {1},
+  isbn = {978-1-119-64073-8},
+  langid = {english},
+  keywords = {C arl S agan,cold war,history,history of science,radio astronomy,SETI,soviet union,technosignatures},
+  file = {/Users/gemmadanks/Zotero/storage/CVBF2LVQ/9781119640738.html}
+}
+
+@article{chybaAstrobiologyStudyLiving2005,
+  title = {Astrobiology: {{The Study}} of the {{Living Universe}}},
+  shorttitle = {Astrobiology},
+  author = {Chyba, Christopher F. and Hand, Kevin P.},
+  year = {2005},
+  month = sep,
+  journal = {Annual Review of Astronomy and Astrophysics},
+  volume = {43},
+  number = {1},
+  pages = {31--74},
+  issn = {0066-4146, 1545-4282},
+  doi = {10.1146/annurev.astro.43.051804.102202},
+  urldate = {2022-12-01},
+  abstract = {{$\blacksquare$} Abstract\hspace{0.6em} Astrobiology is the study of the living universe. Astronomy provides the context for the origin and evolution of life on Earth. Conversely, discoveries about the terrestrial biosphere\textemdash from extremophilic microbes to the evolution of intelligence\textemdash inform our thinking about prospects for life elsewhere. Astrobiology includes the search for extraterrestrial life via in situ exploration, spectroscopy of solar and extrasolar planetary atmospheres, and the search for extraterrestrial intelligence. This review situates astrobiology within philosophical issues of the definition of life and the biological compatibility of the universe. It reviews the habitability of the Galaxy in general and of planets and moons in particular, and summarizes current controversies in origins-of-life research and in evidence for the earliest life on Earth. It critiques certain ``rare Earth'' and ``anthropic'' arguments, and considers four approaches to deciding whether intelligent life exists elsewhere in the Galaxy. It concludes that astrobiology must also speak to the future of human civilization.},
+  langid = {english},
+  file = {/Users/gemmadanks/Zotero/storage/LX4GKUHI/Chyba and Hand - 2005 - Astrobiology The Study of the Living Universe.pdf}
+}
+
+@article{Cocconi1959,
+  title = {Searching for {{Interstellar Communications}}},
+  author = {Cocconi, G and Morrison, P},
+  year = {1959},
+  journal = {Nature},
+  volume = {184},
+  pages = {844--846},
+  urldate = {2022-11-21},
+  file = {/Users/gemmadanks/Zotero/storage/3U26DX4W/184844a0.pdf}
+}
+
+@article{davenportSearchingSETIEllipsoid2022,
+  title = {Searching the {{SETI Ellipsoid}} with {{Gaia}}},
+  author = {Davenport, James R. A. and Cabrales, B{\'a}rbara and Sheikh, Sofia and Croft, Steve and Siemion, Andrew P. V. and Giles, Daniel and Cody, Ann Marie},
+  year = {2022},
+  month = aug,
+  journal = {The Astronomical Journal},
+  volume = {164},
+  number = {3},
+  pages = {117},
+  publisher = {{The American Astronomical Society}},
+  issn = {1538-3881},
+  doi = {10.3847/1538-3881/ac82ea},
+  urldate = {2022-12-01},
+  abstract = {The search for extraterrestrial intelligence (SETI) Ellipsoid is a geometric method for prioritizing technosignature observations based on the strategy of receiving signals synchronized to conspicuous astronomical events. Precise distances to nearby stars from Gaia makes constraining Ellipsoid crossing times possible. Here we explore the utility of using the Gaia Catalog of Nearby Stars to select targets on the SN 1987A SETI Ellipsoid, as well as the Ellipsoids defined by 278 classical novae. Less than 8\% of stars within the 100 pc sample are inside the SN 1987A SETI Ellipsoid, meaning the vast majority of nearby stars are still viable targets for monitoring over time. We find an average of 734 stars per year within the 100 pc volume will intersect the Ellipsoid from SN 1987A, with {$\sim$}10\% of those having distance uncertainties from Gaia better than 0.1 lyr.},
+  langid = {english},
+  file = {/Users/gemmadanks/Zotero/storage/WIB3L5UL/Davenport et al. - 2022 - Searching the SETI Ellipsoid with Gaia.pdf}
+}
 
