--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -27,3 +27,68 @@
   keywords = {bayes' theorem,drake's equation,SETI,T echnosignatures,theory of probability},
   file = {/Users/gemmadanks/Zotero/storage/4SYYHAHF/9781119640738.html}
 }
+
+@ARTICLE{6392862,
+  author={Vitiello, Valentina and Lee, Su-Lin and Cundy, Thomas P. and Yang, Guang-Zhong},
+  journal={IEEE Reviews in Biomedical Engineering}, 
+  title={Emerging Robotic Platforms for Minimally Invasive Surgery}, 
+  year={2013},
+  volume={6},
+  number={},
+  pages={111-126},
+  doi={10.1109/RBME.2012.2236311}}
+  
+@article{Satava2003,
+author = {Satava, Richard},
+year = {2004},
+month = {01},
+pages = {1491-500, xii},
+title = {Robotic surgery: From past to future - A personal journey},
+volume = {83},
+journal = {The Surgical clinics of North America},
+doi = {10.1016/S0039-6109(03)00168-3}
+}
+
+@Inbook{Satava2011,
+author="Satava, Richard M.",
+title="Future Directions in Robotic Surgery",
+bookTitle="Surgical Robotics: Systems Applications and Visions",
+year="2011",
+publisher="Springer US",
+address="Boston, MA",
+pages="3--11",
+isbn="978-1-4419-1126-1",
+doi="10.1007/978-1-4419-1126-1_1",
+url="https://doi.org/10.1007/978-1-4419-1126-1_1"
+}
+
+@ARTICLE{5371822,
+  author={Dupont, Pierre E. and Lock, Jesse and Itkowitz, Brandon and Butler, Evan},
+  journal={IEEE Transactions on Robotics}, 
+  title={Design and Control of Concentric-Tube Robots}, 
+  year={2010},
+  volume={26},
+  number={2},
+  pages={209-225},
+  doi={10.1109/TRO.2009.2035740}}
+  
+@INPROCEEDINGS{1570614,
+  author={Jones, B.A. and Walker, I.D.},
+  booktitle={Proceedings of the 2005 IEEE International Conference on Robotics and Automation}, 
+  title={A New Approach to Jacobian Formulation for a Class of Multi-Section Continuum Robots}, 
+  year={2005},
+  volume={},
+  number={},
+  pages={3268-3273},
+  doi={10.1109/ROBOT.2005.1570614}}
+  
+@article{yang2018grand,
+  title={The grand challenges of Science Robotics},
+  author={Yang, Guang-Zhong and Bellingham, Jim and Dupont, Pierre E and Fischer, Peer and Floridi, Luciano and Full, Robert and Jacobstein, Neil and Kumar, Vijay and McNutt, Marcia and Merrifield, Robert and others},
+  journal={Science robotics},
+  volume={3},
+  number={14},
+  pages={eaar7650},
+  year={2018},
+  publisher={Science Robotics}
+}
