--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -28,7 +28,7 @@
   file = {/Users/gemmadanks/Zotero/storage/4SYYHAHF/9781119640738.html}
 }
 
-@ARTICLE{6392862,
+@ARTICLE{Vitiello2013,
   author={Vitiello, Valentina and Lee, Su-Lin and Cundy, Thomas P. and Yang, Guang-Zhong},
   journal={IEEE Reviews in Biomedical Engineering}, 
   title={Emerging Robotic Platforms for Minimally Invasive Surgery}, 
@@ -36,7 +36,8 @@
   volume={6},
   number={},
   pages={111-126},
-  doi={10.1109/RBME.2012.2236311}}
+  doi={10.1109/RBME.2012.2236311}
+}
   
 @article{Satava2003,
 author = {Satava, Richard},
@@ -70,7 +71,8 @@ url="https://doi.org/10.1007/978-1-4419-1126-1_1"
   volume={26},
   number={2},
   pages={209-225},
-  doi={10.1109/TRO.2009.2035740}}
+  doi={10.1109/TRO.2009.2035740}
+}
   
 @INPROCEEDINGS{1570614,
   author={Jones, B.A. and Walker, I.D.},
@@ -80,7 +82,8 @@ url="https://doi.org/10.1007/978-1-4419-1126-1_1"
   volume={},
   number={},
   pages={3268-3273},
-  doi={10.1109/ROBOT.2005.1570614}}
+  doi={10.1109/ROBOT.2005.1570614}
+}
   
 @article{yang2018grand,
   title={The grand challenges of Science Robotics},
