--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -63,7 +63,7 @@ doi="10.1007/978-1-4419-1126-1_1",
 url="https://doi.org/10.1007/978-1-4419-1126-1_1"
 }
 
-@ARTICLE{5371822,
+@ARTICLE{Dupont10,
   author={Dupont, Pierre E. and Lock, Jesse and Itkowitz, Brandon and Butler, Evan},
   journal={IEEE Transactions on Robotics}, 
   title={Design and Control of Concentric-Tube Robots}, 
@@ -74,7 +74,7 @@ url="https://doi.org/10.1007/978-1-4419-1126-1_1"
   doi={10.1109/TRO.2009.2035740}
 }
   
-@INPROCEEDINGS{1570614,
+@INPROCEEDINGS{Jones05,
   author={Jones, B.A. and Walker, I.D.},
   booktitle={Proceedings of the 2005 IEEE International Conference on Robotics and Automation}, 
   title={A New Approach to Jacobian Formulation for a Class of Multi-Section Continuum Robots}, 
@@ -85,7 +85,7 @@ url="https://doi.org/10.1007/978-1-4419-1126-1_1"
   doi={10.1109/ROBOT.2005.1570614}
 }
   
-@article{yang2018grand,
+@article{Yang18,
   title={The grand challenges of Science Robotics},
   author={Yang, Guang-Zhong and Bellingham, Jim and Dupont, Pierre E and Fischer, Peer and Floridi, Luciano and Full, Robert and Jacobstein, Neil and Kumar, Vijay and McNutt, Marcia and Merrifield, Robert and others},
   journal={Science robotics},
