--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -95,3 +95,203 @@ url="https://doi.org/10.1007/978-1-4419-1126-1_1"
   year={2018},
   publisher={Science Robotics}
 }
+
+@article{Badani2007,
+    author = {Badani, Ketan and Kaul, Sanjeev and Menon, Mani},
+    year = {2007},
+    month = {11},
+    pages = {1951-8},
+    title = {Evolution of robotic radical prostatectomy - Assessment after 2766 procedures},
+    volume = {110},
+    journal = {Cancer},
+    doi = {10.1002/cncr.23027}
+}
+	
+@ARTICLE{Ettorre9531355,
+  author={D’Ettorre, Claudia and Mariani, Andrea and Stilli, Agostino and Rodriguez y Baena, Ferdinando and Valdastri, Pietro and Deguet, Anton and Kazanzides, Peter and Taylor, Russell H. and Fischer, Gregory S. and DiMaio, Simon P. and Menciassi, Arianna and Stoyanov, Danail},
+  journal={IEEE Robotics & Automation Magazine}, 
+  title={Accelerating Surgical Robotics Research: A Review of 10 Years With the da Vinci Research Kit}, 
+  year={2021},
+  volume={28},
+  number={4},
+  pages={56-78},
+  doi={10.1109/MRA.2021.3101646}
+}
+  
+@article{marcus2014,
+   title={Da vinci robot-assisted Keyhole Neurosurgery: A cadaver study on feasibility and safety}, 
+   volume={38}, 
+   DOI={10.1007/s10143-014-0602-2}, 
+   number={2}, 
+   journal={Neurosurgical Review}, 
+   author={Marcus, Hani J. and Hughes-Hallett, Archie and Cundy, Thomas P. and Yang, Guang-Zhong and Darzi, Ara and Nandi, Dipankar}, 
+   year={2014}, 
+   pages={367–371}
+}
+   
+@misc{intuitive2023, 
+    author = {Intuitive},
+    url={https://www.intuitive.com/en-us/about-us/company},
+    year={2021},
+    journal={Intuitive.com}
+}
+	
+@article{Onan20,
+	author = {Onan, Burak},
+	year = {2020},
+	month = {10},
+	pages = {708-724},
+	title = {Minimal access in cardiac surgery},
+	volume = {28},
+	journal = {The Turkish Journal of Thoracic and Cardiovascular Surgery},
+	doi = {10.5606/tgkdc.dergisi.2020.19614}
+}
+
+@ARTICLE{Kalogeropoulos2022971762, 
+	AUTHOR={Kalogeropoulos, Andreas S. and Redwood, Simon R. and Allen, Christopher J. and Hurrell, Harriet and Chehab, Omar and Rajani, Ronak and Prendergast, Bernard and Patterson, Tiffany},   	 
+	TITLE={A 20-year journey in transcatheter aortic valve implantation: Evolution to current eminence},      	
+	JOURNAL={Frontiers in Cardiovascular Medicine},      	
+	VOLUME={9},           	
+	YEAR={2022},      	  
+	URL={https://www.frontiersin.org/articles/10.3389/fcvm.2022.971762},       	
+	DOI={10.3389/fcvm.2022.971762},      	
+	ISSN={2297-055X}
+}
+
+@article{TOGGWEILER2013643,
+	title = {Management of Vascular Access in Transcatheter Aortic Valve Replacement: Part 1: Basic Anatomy, Imaging, Sheaths, Wires, and Access Routes},
+	journal = {JACC: Cardiovascular Interventions},
+	volume = {6},
+	number = {7},
+	pages = {643-653},
+	year = {2013},
+	issn = {1936-8798},
+	doi = {https://doi.org/10.1016/j.jcin.2013.04.003},
+	url = {https://www.sciencedirect.com/science/article/pii/S1936879813008029},
+	author = {Stefan Toggweiler and Jonathon Leipsic and Ronald K. Binder and Melanie Freeman and Marco Barbanti and Robin H. Heijmen and David A. Wood and John G. Webb}
+}
+
+@ARTICLE{Burgner7314984,
+  author={Burgner, Kahrs, Jessica and Rucker, D. Caleb and Choset, Howie},
+  journal={IEEE Transactions on Robotics}, 
+  title={Continuum Robots for Medical Applications: A Survey}, 
+  year={2015},
+  volume={31},
+  number={6},
+  pages={1261-1280},
+  doi={10.1109/TRO.2015.2489500}
+}
+  
+@article{yang2018grand,
+  title={The grand challenges of Science Robotics},
+  author={Yang, Guang-Zhong and Bellingham, Jim and Dupont, Pierre E and Fischer, Peer and Floridi, Luciano and Full, Robert and Jacobstein, Neil and Kumar, Vijay and McNutt, Marcia and Merrifield, Robert and others},
+  journal={Science robotics},
+  volume={3},
+  number={14},
+  pages={eaar7650},
+  year={2018},
+  publisher={Science Robotics}
+}
+
+@ARTICLE{Wu7801024,
+  author={Wu, Liao and Crawford, Ross and Roberts, Jonathan},
+  journal={IEEE Robotics and Automation Letters}, 
+  title={Dexterity Analysis of Three 6-DOF Continuum Robots Combining Concentric Tube Mechanisms and Cable-Driven Mechanisms}, 
+  year={2017},
+  volume={2},
+  number={2},
+  pages={514-521},
+  doi={10.1109/LRA.2016.2645519}
+}
+  
+ @article{CHIKHAOUI2016234,
+  title={Kinematics and performance analysis of a novel concentric tube robotic structure with embedded soft micro-actuation},
+  author={Chikhaoui, Mohamed Taha and Rabenorosoa, Kanty and Andreff, Nicolas},
+  journal={Mechanism and Machine Theory},
+  volume={104},
+  pages={234--254},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{Peyron2022MagneticCT,
+	title={Magnetic concentric tube robots: Introduction and analysis},
+	author={Quentin Peyron and Quentin Boehler and Patrick Rougeot and Pierre Roux and Bradley J. Nelson and Nicolas Andreff and Kanty Rabenorosoa and Pierre Renaud},
+	journal={The International Journal of Robotics Research},
+	year={2022},
+	volume={41},
+	pages={418 - 440}
+}
+
+@article{LI2017148,
+	title = {Kinematic comparison of surgical tendon-driven manipulators and concentric tube manipulators},
+	journal = {Mechanism and Machine Theory},
+	volume = {107},
+	pages = {148-165},
+	year = {2017},
+	issn = {0094-114X},
+	doi = {https://doi.org/10.1016/j.mechmachtheory.2016.09.018},
+	url = {https://www.sciencedirect.com/science/article/pii/S0094114X16302580},
+	author = {Zheng Li and Liao Wu and Hongliang Ren and Haoyong Yu},
+	keywords = {Tendon-driven manipulator, Concentric tube manipulator, Minimally invasive surgery, Kinematics, Workspace, Dexterity}
+}
+
+@Inbook{Jin2015,
+	author="Jin, Yan and Chanal, H{\'e}l{\`e}ne and Paccot, Flavien",
+	title="Parallel Robots",
+	bookTitle="Handbook of Manufacturing Engineering and Technology",
+	year="2015",
+	publisher="Springer London",
+	address="London",
+	pages="2091--2127",
+	isbn="978-1-4471-4670-4",
+	doi="10.1007/978-1-4471-4670-4_99",
+	url="https://doi.org/10.1007/978-1-4471-4670-4_99"
+}
+
+@article{mcclintock2018millidelta,
+	title={The milliDelta: A high-bandwidth, high-precision, millimeter-scale Delta robot},
+	author={McClintock, Hayley and Temel, Fatma Zeynep and Doshi, Neel and Koh, Je-sung and Wood, Robert J},
+	journal={Science Robotics},
+	volume={3},
+	number={14},
+	year={2018},
+	publisher={Science Robotics}
+}
+
+@article{abn4292,
+	author = {Maxence Leveziel  and Wissem Haouas  and Guillaume J. Laurent  and Michaël Gauthier  and Redwan Dahmouche },
+	title = {MiGriBot: A miniature parallel robot with integrated gripping for high-throughput micromanipulation},
+	journal = {Science Robotics},
+	volume = {7},
+	number = {69},
+	pages = {eabn4292},
+	year = {2022},
+	doi = {10.1126/scirobotics.abn4292},
+	URL = {https://www.science.org/doi/abs/10.1126/scirobotics.abn4292},
+	eprint = {https://www.science.org/doi/pdf/10.1126/scirobotics.abn4292},
+}
+
+@inproceedings{bryson_toward_2014,
+	address = {Hong Kong, China},
+	title = {Toward parallel continuum manipulators},
+	isbn = {978-1-4799-3685-4},
+	url = {http://ieeexplore.ieee.org/document/6906943/},
+	doi = {10.1109/ICRA.2014.6906943},
+	urldate = {2022-04-07},
+	booktitle = {2014 {IEEE} {International} {Conference} on {Robotics} and {Automation} ({ICRA})},
+	publisher = {IEEE},
+	author = {Bryson, Caroline E. and Rucker, D. Caleb},
+	month = may,
+	year = {2014},
+	pages = {778--785},
+}
+
+@inbook{gilbert2016concentric,
+	author = {Gilbert, Hunter B and Rucker, D Caleb and Webster III, Robert J},
+	booktitle={Robotics Research},
+	year = {2016},
+	pages = {253-269},
+	title = {Concentric Tube Robots: The State of the Art and Future Directions},
+	publisher={Robotics Research. Springer Tracts in Advanced Robotics}
+}
