--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -4651,7 +4651,7 @@ author = {Jinzhao Yang and Haijun Peng and Wenya Zhou and Jie Zhang and Zhigang 
   
   @misc{Joystick2022, note = "2-Axis joystick with Select Button, available at https://bc-robotics.com/shop/2-axis-joystick-with-select-button/"}
   
- @inproceedings{10181373,
+ @inproceedings{M10181373,
 author = {M. John Matthewson},
 title = {{Optical fiber mechanical testing techniques}},
 volume = {10272},
@@ -8234,7 +8234,7 @@ journal = {Instruments and Experimental Techniques},
 doi = {10.1134/S0020441221040187}
 }
 
-@inproceedings{122313982,
+@inproceedings{Luzius122313982,
 author = {Luzius Kronig and Philipp H{\"o}rler and Jean-Paul Kneib and Mohamed Bouri},
 title = {{Design and performances of an optical metrology system to test position and tilt accuracy of fiber positioners
 }},
@@ -8260,7 +8260,7 @@ journal = {Journal of Optics},
 doi = {10.1007/s12596-016-0375-9}
 }
 
-@inproceedings{122183334,
+@inproceedings{Christian122183334,
 author = {Christian Waltermann and Anna Lena Baumann and Konrad Bethmann and Alexander Doering and Jan Koch and Martin Angelmahr and Wolfgang Schade},
 title = {{Femtosecond laser processing of evanescence field coupled waveguides in single mode glass fibers for optical 3D shape sensing and navigation}},
 volume = {9480},
@@ -8326,7 +8326,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S092401360900418X},
 author = {Dong Wang and Teilin Shi and Jie Pan and Guanglan Liao and Zirong Tang and Lin Liu}
 }
 
-@article{14750236,
+@article{Lenssen14750236,
     author = {Lenssen, Bo and Bellouard, Yves},
     title = "{Optically transparent glass micro-actuator fabricated by femtosecond laser exposure and chemical etching}",
     journal = {Applied Physics Letters},
@@ -8342,7 +8342,7 @@ author = {Dong Wang and Teilin Shi and Jie Pan and Guanglan Liao and Zirong Tang
 }
 
 
-@inproceedings{12364504,
+@inproceedings{Seiichi12364504,
 author = {Seiichi Hata and Kaiji Sato and Akira Shimokohbe},
 title = {{Fabrication of thin film metallic glass and its application to microactuators}},
 volume = {3892},
@@ -8369,7 +8369,7 @@ url = {https://www.sciencedirect.com/science/article/pii/S0924424709002179},
 author = {Sheng Wang and Dongming Sun and Seiichi Hata and Junpei Sakurai and Akira Shimokohbe}
 }
 
-@ARTICLE{260256,
+@ARTICLE{Minami260256,
   author={Minami, K. and Kawamura, S. and Esashi, M.},
   journal={Journal of Microelectromechanical Systems}, 
   title={Fabrication of distributed electrostatic micro actuator (DEMA)}, 
@@ -8390,7 +8390,7 @@ journal = {International Journal of Automation Technology},
 doi = {10.20965/ijat.2015.p0662}
 }
 
-@article{11643056,
+@article{Kometani11643056,
     author = {Kometani, Reo and Morita, Takahiko and Watanabe, Keiichiro and Hoshino, Takayuki and Kondo, Kazushige and Kanda, Kazuhiro and Haruyama, Yuichi and Kaito, Takashi and Fujita, Jun-ichi and Ishida, Masahiko and Ochiai, Yukinori and Matsui, Shinji},
     title = "{Nanomanipulator and actuator fabrication on glass capillary by focused-ion-beam-chemical vapor deposition}",
     journal = {Journal of Vacuum Science & Technology B: Microelectronics and Nanometer Structures Processing, Measurement, and Phenomena},
@@ -8405,7 +8405,7 @@ doi = {10.20965/ijat.2015.p0662}
     eprint = {https://pubs.aip.org/avs/jvb/article-pdf/22/1/257/11022404/257\_1\_online.pdf},
 }
 
-@article{12800777,
+@article{F12800777,
     author = {Füzesi, F. and Jornod, A. and Thomann, P. and Plimmer, M. D. and Dudle, G. and Moser, R. and Sache, L. and Bleuler, H.},
     title = "{An electrostatic glass actuator for ultrahigh vacuum: A rotating light trap for continuous beams of laser-cooled atoms}",
     journal = {Review of Scientific Instruments},
@@ -8459,7 +8459,7 @@ url = {https://www.sciencedirect.com/science/article/pii/092442479400872F},
 author = {T. Rogers and J. Kowal},
 }
 
-@article{201000283,
+@article{Gao201000283,
 author = {Gao, Shang-lin and Zhuang, Rong-Chuan and Zhang, Jie and Liu, Jian-Wen and Mäder, Edith},
 title = {Glass Fibers with Carbon Nanotube Networks as Multifunctional Sensors},
 journal = {Advanced Functional Materials},
